--- a/pairing/Cargo.toml
+++ b/pairing/Cargo.toml
@@ -21,9 +21,11 @@ repository = "https://github.com/ebfull/pairing"
 rand = "0.4"
 byteorder = "1"
 ff = { version = "0.4", features = ["derive"] }
+sha2 = "0.8.1"
+hex = "0.3.1"
 
 [dependencies.pyo3]
-version = "0.4"
+version = "0.9.1"
 features = ["extension-module"]
 
 [features]
