--- a/pairing/Cargo.toml
+++ b/pairing/Cargo.toml
@@ -2,7 +2,7 @@
 name = "pypairing"
 
 # Remember to change version string in README.md.
-version = "0.14.2"
+version = "0.16.0"
 authors = [
     "Tom Yurek <yurek2@gmail.com>",
     "Rahul Mahadev"
@@ -18,13 +18,21 @@ homepage = "https://github.com/ebfull/pairing"
 repository = "https://github.com/ebfull/pairing"
 
 [dependencies]
-rand = "0.4"
+group = "0.6.0"
+#rand = "0.4"
 byteorder = "1"
-ff = { version = "0.4", features = ["derive"] }
+ff = { version = "0.6.0", features = ["derive"] }
+#ff = "0.6.0"
 sha2 = "0.8.1"
 hex = "0.3.1"
 num-bigint = "0.2.6"
 num-traits = "0.2.11"
+rand_core = "0.5"
+rand_chacha = "0.2.2"
+
+[dev-dependencies.rand_xorshift]
+version = "0.2"
+
 
 [dependencies.pyo3]
 # version = "0.9.2"
