--- a/pairing/Cargo.toml
+++ b/pairing/Cargo.toml
@@ -35,8 +35,8 @@ version = "0.2"
 
 
 [dependencies.pyo3]
-# version = "0.9.2"
-git = "https://github.com/PyO3/pyo3"
+version = "0.10.0"
+# git = "https://github.com/PyO3/pyo3"
 features = ["extension-module", "num-bigint"]
 
 [features]
